tests/paczka2/big_fuzzy/14820172.err
Error in line 10: rUd8bf S431 57,6
Error in line 11: rUd8bf A808 98,0
Error in line 12: Ji25q A808 299,4
Error in line 25: FPz A676 97,2
Error in line 24: rUd8bf A491 148,2
Error in line 8: GCXPQX0mC A676 46,0
Error in line 26: A808 S431 10,9
Error in line 30: rUd8bf A676 36,4
Error in line 32: GCXPQX0mC A491 76,5
Error in line 55: A808 S431 -5,0
Error in line 50: FPz A491 1,4
Error in line 59: A808 S431 4,7
Error in line 101: PlshO A491 73,20
Error in line 106: FPz A808 69,9
Error in line 104: GCXPQX0mC A676 5,4
Error in line 108: FPz A491 71,6
Error in line 109: GCXPQX0mC A491 81,5
Error in line 124: RFBOf A676 -1,1
Error in line 125: Ji25q A808 290,7
Error in line 117: RFBOf A676 47,3
Error in line 126: GCXPQX0mC A491 56,2
Error in line 136: FPz S431 9,3
Error in line 105: PlshO A491 84,7
Error in line 140: rUd8bf A491 20,8
Error in line 139: PlshO A808 91,7
Error in line 144: GCXPQX0mC A676 67,6
Error in line 150: FPz A491 49,6
Error in line 164: rUd8bf A676 92,8
Error in line 148: GCXPQX0mC A808 280,1
Error in line 163: A808 A491 96,6
Error in line 172: GCXPQX0mC S431 18,4
Error in line 186: rUd8bf A676 215,8
Error in line 188: rUd8bf A808 71,5
Error in line 189: FPz A676 45,1
Error in line 192: PlshO S431 68,2
Error in line 185: GCXPQX0mC A808 68,8
Error in line 197: PlshO A491 75,6
Error in line 196: RFBOf A808 36,6
Error in line 203: RFBOf A491 52,2
Error in line 206: RFBOf S431 91,9
Error in line 220: Ji25q A676 85,3
Error in line 239: FPz A491 6%,9
Error in line 245: FPz A491 234,9
Error in line 247: FPz S431 79,0
